Quite a bit of misc Reader cleanup all around. Next I'll be going a bit deeper with the scrub, into Javadocs and such. Love getting rid of those global variables if i can though. :)